[package]
name = "kaspa-atan-core"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[dependencies]
kaspa-smt.workspace = true
kaspa-hashes.workspace = true
kaspa-consensus-core.workspace = true

thiserror.workspace = true

[lints]
workspace = true
