[package]
name = "kaspa-atan-validation"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[dependencies]
kaspa-atan-core.workspace = true
kaspa-hashes.workspace = true
kaspa-seq-commit.workspace = true
kaspa-smt.workspace = true

[lints]
workspace = true
